# Nexus

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  ERRORLOG.md  Makefile  README.md  RISK_REVIEW.md  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  phase2-priorities.md
backend/: .dockerignore  Dockerfile  alembic.ini  feedback_on_writing_guidelines.txt  journal.txt  pyproject.toml  quicksort.txt  stress_test_phase2_results.json  stress_test_results.json  summary_of_async_programming.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_dead_letters_and_a2a_tokens.py  003_eval_results.py  004_phase4_multi_tenant.py  005_performance_indexes.py  006_rls_policies.py  007_phase5_track_b_c.py  008_phase5_remaining.py  009_security_and_federation.py  010_conference_room_messaging.py  011_workspace_storage.py  012_audit_perf_indexes.py  012_encrypt_oauth_tokens.py  013_encrypt_oauth_tokens.py  014_a2a_pbkdf2_hashing.py  015_audit_log_partition_immutable.py
backend/engineering/: coding_standards.md
backend/nexus/: app.py  settings.py  taskiq_app.py
backend/nexus/agents/: analyst.py  base.py  ceo.py  director.py  engineer.py  factory.py  health_monitor.py  prompt_creator.py  qa.py  runner.py  writer.py
backend/nexus/api/: a2a_tokens.py  agent_builder.py  agents.py  analytics.py  api_keys.py  approvals.py  audit.py  auth.py  billing.py  eval.py  federation.py  feedback.py  health.py  invitations.py  marketplace.py  middleware.py  oauth.py  prompts.py  router.py  schedules.py  sla.py  tasks.py  webhooks.py  websocket.py  workspace_files.py  workspaces.py
backend/nexus/audit/: retention.py  service.py
backend/nexus/core/: __init__.py  recovery.py  retry.py  sanitization.py  scheduler.py  shutdown.py  startup.py
backend/nexus/db/: models.py  rls.py  seed.py  session.py
backend/nexus/eval/: langfuse_client.py  runner.py  schemas.py  scorer.py  traces.py
backend/nexus/gateway/: auth.py  outbound.py  rate_limiter.py  routes.py  schemas.py
backend/nexus/integrations/: __init__.py
backend/nexus/kafka/: consumer.py  dead_letter.py  health_check.py  meeting.py  producer.py  result_consumer.py  schemas.py  topics.py
backend/nexus/keepsave/: client.py  tools.py
backend/nexus/llm/: cost_estimator.py  factory.py  usage.py
backend/nexus/memory/: embeddings.py  episodic.py  semantic.py  working.py
backend/nexus/redis/: clients.py
backend/nexus/tests/: conftest.py
backend/nexus/tools/: adapter.py  guards.py  registry.py  workspace.py
backend/nexus/workflows/: worker.py  (+3 more)
(+237 files in other folders)
